--- a/EFI/CLOVER/kexts/Other/itlwmx.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/itlwmx.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18G6020</string>
+	<string>19G73</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -14,28 +14,30 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>itlwmx</string>
+	<key>CFBundlePackageType</key>
+	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.0</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.0.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10G8</string>
+	<string>11E708</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>18G74</string>
+	<string>16E185</string>
 	<key>DTSDKName</key>
-	<string>macosx10.14</string>
+	<string>macosx10.12</string>
 	<key>DTXcode</key>
-	<string>1030</string>
+	<string>1160</string>
 	<key>DTXcodeBuild</key>
-	<string>10G8</string>
+	<string>11E708</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>itlwmx</key>
@@ -83,6 +85,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.12</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2020 钟先耀. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
@@ -100,5 +104,9 @@
 		<key>com.apple.kpi.mach</key>
 		<string>16.7</string>
 	</dict>
+	<key>OSBundleRequired</key>
+	<string>Network-Root</string>
+	<key>XCBUILD</key>
+	<string>2b407cb</string>
 </dict>
 </plist>
